--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
                 </div>
 				<div class="col-md-3">
                     <div class="full blog_img_popular">
-                        <img class="img-responsive" src="images/p1.png" alt="#" />
+                        <img class="img-responsive" src="images/aditya.jpeg" alt="#" />
 						<h4>Aditya P. Singh</h4>
                     </div>
                 </div>
